yet another try

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <input type="button" value="Days" />
     <br />
 
-    <input type="text" disabled />
-    <input type="button" value="todaysDate" />
+    <input type="text" id="date" disabled />
+    <input type="button" value="Today" onclick="todaysDate()" />
 
     <script src="./js/script.js"></script>
   </body>
